--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "element-plus": "^2.3.5",
-    "vue": "^3.3.4"
+    "chartist": "^1.3.0",
+    "echarts": "^5.4.2",
+    "element-plus": "^2.3.3",
+    "jsmpeg-player": "^3.0.3",
+    "lodash": "^4.17.21",
+    "vue": "^3.2.47",
+    "vue-echarts": "^6.5.5",
+    "vue-router": "^4.2.2",
+    "vuecharts3": "^2.3.0"
   },
   "devDependencies": {
+    "@cycjimmy/jsmpeg-player": "^6.0.5",
     "@iconify-json/ep": "^1.1.10",
     "@types/node": "^20.2.1",
     "@vitejs/plugin-vue": "^4.2.3",
